
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef double u64 ;
struct perf_evsel {TYPE_1__* counts; } ;
struct perf_counts_values {double val; double ena; double run; } ;
struct TYPE_2__ {int scaled; struct perf_counts_values aggr; } ;


 scalar_t__ FD (struct perf_evsel*,int,int) ;
 int errno ;
 scalar_t__ readn (scalar_t__,struct perf_counts_values*,size_t) ;

int __perf_evsel__read(struct perf_evsel *evsel,
         int ncpus, int nthreads, bool scale)
{
 size_t nv = scale ? 3 : 1;
 int cpu, thread;
 struct perf_counts_values *aggr = &evsel->counts->aggr, count;

 aggr->val = aggr->ena = aggr->run = 0;

 for (cpu = 0; cpu < ncpus; cpu++) {
  for (thread = 0; thread < nthreads; thread++) {
   if (FD(evsel, cpu, thread) < 0)
    continue;

   if (readn(FD(evsel, cpu, thread),
      &count, nv * sizeof(u64)) < 0)
    return -errno;

   aggr->val += count.val;
   if (scale) {
    aggr->ena += count.ena;
    aggr->run += count.run;
   }
  }
 }

 evsel->counts->scaled = 0;
 if (scale) {
  if (aggr->run == 0) {
   evsel->counts->scaled = -1;
   aggr->val = 0;
   return 0;
  }

  if (aggr->run < aggr->ena) {
   evsel->counts->scaled = 1;
   aggr->val = (u64)((double)aggr->val * aggr->ena / aggr->run + 0.5);
  }
 } else
  aggr->ena = aggr->run = 0;

 return 0;
}
